# Project-CV

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  cv_core.cpp  cv_core.h  logger.h
src/core/: cv_core.cpp  cv_core.h  cv_region.cpp  cv_region.h
src/dnn/: cv_face.cpp  cv_face.h
src/glcm/: README.md  cv_glcm.cpp  cv_glcm.h
src/template/: cv_features.cpp  cv_features.h
test/: CMakeLists.txt  test_cv_core.cpp  test_cv_face.cpp  test_cv_glcm.cpp  test_cv_region.cpp  test_cv_template.cpp  test_utils.cpp
utils/: utils.h
